[Actions][List] Fix design (name too long possibility), run action, add action

--- a/src/websiteDev/ozra/actions/list/list.scss
+++ b/src/websiteDev/ozra/actions/list/list.scss
@@ -1,3 +1,13 @@
+$width: 250px;
+
 .actions-card {
-  min-width: 200px;
+  width: $width;
+  max-width: $width;
+
+  .text-limiter {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: $width - 20px;
+  }
 }
